--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sharp": "^0.34.5",
     "zod": "^4.3.6"
   },
